adapt other changes
Signed-off-by: Xin Li <xin@hashgraph.com>